# simple-agent-with-skills

./: .env.example  .gitignore  README.md  pyproject.toml
src/simple_agent_with_skills/: __init__.py  __main__.py  agent.py  cli.py  config.py  skills.py
src/simple_agent_with_skills/tools/: __init__.py  builtin.py  file_tools.py  registry.py  skill_tools.py
tests/: test_add.py  test_config.py  test_skill_tool.py  test_skills.py  test_tools.py
